Updated for to have narration without digital identity

--- a/src/main/resources/static/profiles.html
+++ b/src/main/resources/static/profiles.html
@@ -193,6 +193,10 @@
             <label for="imageUpload">Profile Picture</label>
             <input type="file" name="profilePicture" id="imageUpload" accept="image/*">
         </div>
+        <div class="form-group">
+            <label for="voiceId">Pre-Configured Voice ID</label>
+            <input type="text" id="voiceId" name="voiceId" placeholder="Voice ID from Eleven Labs"/>
+        </div>
 
         <div class="form-group">
             <label id="voice-label" for="soundSample">Voice Sample</label>
