--- a/src/main/resources/static/narration.html
+++ b/src/main/resources/static/narration.html
@@ -41,7 +41,7 @@
         body * {
             font-family: 'Mulish', sans-serif;
             text-align: center;
-            font-size: xx-large;
+            font-size: clamp(16px, 2vw, 24px)
         }
 
         .material-icons {
@@ -101,21 +101,26 @@
         }
 
         #video-wrapper {
-            background: url(bg.png) top;
-            display: flex; /* Use flexbox layout */
-            justify-content: center; /* Center the videos horizontally */
-            align-items: center; /* Center the videos vertically */
-            flex-direction: row;
+            display: flex;
+            justify-content: center;
+            align-items: center;
         }
 
-        #narrated-video-container,
-        #video-container {
-            margin: 10px; /* Add some space between the videos */
+        #narrated-video-container {
+            position: relative;
+            width: 80vw; /* Set a specific width, adjust as needed */
+            max-width: 800px; /* Optional max width */
+            aspect-ratio: 16 / 9; /* Fixed aspect ratio */
+            overflow: hidden;
         }
 
         #narrated-video {
-            border-radius: 0;
+            width: 100%;
+            height: 100%;
+            object-fit: cover;
+            border-radius: 0; /* Retain circular shape if needed */
         }
+
 
         video {
             max-height: 1000px;
@@ -191,6 +196,8 @@
                 if(getUrlParameter("assistantId") === null && assistantId === "asst_CXxwcp1WpNvzFE4UwSFS4AiL") {
                     select.selectedIndex = i;
                     updateURL();
+                } else if(getUrlParameter("assistantId") === assistantId) {
+                    select.selectedIndex = i;
                 }
             }
         }
@@ -456,12 +463,8 @@
         </div>
         <div>
             <select id="mood" onchange="updateURL()">
-                <options>
-                </options>
             </select>
             <select id="assistantId" onchange="updateURL()">
-                <options>
-                </options>
             </select>
         </div>
         <div id="answer"></div>
